# speech-emotion

./: FIX_SUMMARY.md  README.md  REBUILD_GUIDE.md  app.py  config.py  download_dataset.py  pyproject.toml  render.yaml  requirements.txt  setup.py  train_model.py
models/: feature_params.pkl  label_encoder.pkl  training_info.json
templates/: index.html
